--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,14 @@ jobs:
         image: "circleci/openjdk:8-jdk-browsers"
     steps: 
       - checkout
+       -
+        run: 
+          command: | 
+              # install DumpsterDiver here
+              echo "installing pip and running DumpsterDiver"
+              ...
+          name: "dumpster diver"
+
       - setup_remote_docker
       - 
         restore_cache: 
