--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,12 +7,16 @@ jobs:
         image: "circleci/openjdk:8-jdk-browsers"
     steps: 
       - checkout
-       -
+      -
         run: 
           command: | 
               # install DumpsterDiver here
               echo "installing pip and running DumpsterDiver"
-              ...
+              pip install
+              git clone https://github.com/securing/DumpsterDiver.git
+              cd DumpsterDiver
+              python3 DumpsterDiver.py -p /home/circleci/spring-rest-helloworld --min-key 40 --max-key 40 --entropy 4.3
+              
           name: "dumpster diver"
 
       - setup_remote_docker
