--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,8 @@ jobs:
           command: | 
               # install DumpsterDiver here
               echo "installing pip and running DumpsterDiver"
-              pip install -r requirements.txt
+              sudo apt-get install python3-pip
+              pip3 install -r requirements.txt
               git clone https://github.com/securing/DumpsterDiver.git
               cd DumpsterDiver
               python3 DumpsterDiver.py -p /home/circleci/spring-rest-helloworld --min-key 40 --max-key 40 --entropy 4.3
