--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,9 +61,10 @@ jobs:
           command:
               # install trivy here
               sudo apt-get install wget apt-transport-https gnupg lsb-release
-              wget -qO - https://aquasecurity.github.io/trivy-repo/deb/public.key | sudo apt-key add -
-              echo deb https://aquasecurity.github.io/trivy-repo/deb $(lsb_release -sc) main | sudo tee -a /etc/apt/sources.list.d/trivy.list
+              sudo wget -qO - https://aquasecurity.github.io/trivy-repo/deb/public.key | sudo apt-key add -
+              sudo echo deb https://aquasecurity.github.io/trivy-repo/deb $(lsb_release -sc) main | sudo tee -a /etc/apt/sources.list.d/trivy.list
               sudo apt-get update
               sudo apt-get install trivy
+              trivy image $DOCKER_USER/$CIRCLE_PROJECT_REPONAME:$(cat tempvers.txt)
     working_directory: ~/spring-rest-helloworld
     
