--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,7 +62,7 @@ jobs:
               # install trivy here
               sudo apt-get install wget apt-transport-https gnupg lsb-release
               sudo wget -qO - https://aquasecurity.github.io/trivy-repo/deb/public.key | sudo apt-key add -
-              sudo tee -a /etc/apt/sources.list.d/trivy.list
+              sudo echo deb https://aquasecurity.github.io/trivy-repo/deb $(lsb_release -sc) main | sudo tee -a /etc/apt/sources.list.d/trivy.list
               sudo apt-get update
               sudo apt-get install trivy
               trivy image $DOCKER_USER/$CIRCLE_PROJECT_REPONAME:$(cat tempvers.txt)
