--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,7 +58,7 @@ jobs:
           name: "Build application Docker image"
       -
         run: 
-          command:
+          command: |
               # install trivy here
               sudo apt-get install wget apt-transport-https gnupg lsb-release
               wget -qO - https://aquasecurity.github.io/trivy-repo/deb/public.key | sudo apt-key add -
